[project]
name = "langchain-project"
version = "0.1.0"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-text-splitters",
    "langchain-chroma",
    "langmem",
    "openai",
    "tiktoken",
    "typing-extensions",
    "requests",
    "langchain-deepseek",
    "langchain-mcp-adapters"
]
